<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteActivity">

    <TextView
        android:id="@+id/text_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_note"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        app:layout_constraintBottom_toTopOf="@id/edit_note_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tag_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacing="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_note_title"
        app:layout_constraintTop_toBottomOf="@+id/text_note_title"
        app:singleSelection="false"
        android:checkable="true"/>


    <EditText
        android:id="@+id/edit_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_student_second_surname_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_note_title"
        tools:text="Titulo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_student_second_surname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/body"
        app:layout_constraintBottom_toTopOf="@+id/save_note_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_note_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_note_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPersonName"
            android:minHeight="200dp"
            tools:text="Martín" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_student_second_surname_layout" />




</androidx.constraintlayout.widget.ConstraintLayout>