<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondoSettings"
    android:id="@+id/rootview"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardSettings"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textColor="@color/textoSettings"
                android:textSize="30dp"

                android:background="@color/cardSettings"
                android:text="@string/cambiar_tema"></TextView>
            <ImageView
                android:id="@+id/changewall"
                android:layout_marginLeft="20dp"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:src="@drawable/thememode"
></ImageView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/cardSettings"
            >

            <Switch
                android:id="@+id/switch1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/textoSettings"
                android:textSize="25dp"
                android:text="@string/modo_claro" />
            <Switch
                android:id="@+id/switch2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/textoSettings"
                android:layout_marginTop="20dp"
                android:textSize="25dp"
                android:text="@string/modo_oscuro" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>