<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondoSettings"

    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondoSettings"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/textoSettings"
            android:textSize="30dp"

            android:background="@color/fondoSettings"
            android:text="Ajustes"></TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardCornerRadius="26dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/cardSettings"
            >

            <LinearLayout
                android:id="@+id/llfondo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/paleta"
                    android:scaleType="centerCrop"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cambiar_fondo"
                        android:textSize="18sp"
                        android:textColor="@color/textoSettings"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cambiar_el_fondo_2"
                        android:textSize="14sp"
                        android:textColor="@android:color/darker_gray"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="26dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/cardSettings"
            >

            <LinearLayout
                android:id="@+id/llIdioma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/language"
                    android:scaleType="centerCrop"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cambiar_idioma"
                        android:textSize="18sp"
                        android:textColor="@color/textoSettings"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cambiar_el_idioma_2"
                        android:textSize="14sp"
                        android:textColor="@android:color/darker_gray"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="26dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/cardSettings"
            >

        <LinearLayout
            android:id="@+id/llTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:src="@drawable/thememode"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cambiar_tema"
                    android:textSize="18sp"
                    android:textColor="@color/textoSettings"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:text="@string/cambiar_tema_2"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="26dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/cardSettings"
            >

            <LinearLayout
                android:id="@+id/llPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/mobilepin"
                    android:scaleType="centerCrop"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cambiar_pin"
                        android:textSize="18sp"
                        android:textColor="@color/textoSettings"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cambiar_pin_2"
                        android:textSize="14sp"
                        android:textColor="@android:color/darker_gray"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>