<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondofiles"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:text="@string/categorias"
        android:textSize="25dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <!-- Primer elemento del grid con imagen alineada al centro izquierda -->
        <LinearLayout
            android:id="@+id/llAndroid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/esquinas_redondeadas_files"
            android:gravity="center_vertical|start">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|start"
                android:layout_margin="10dp"
                android:src="@drawable/androidicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps_android" />

        </LinearLayout>

        <!-- Segundo elemento del grid con imagen alineada al centro izquierda -->
        <LinearLayout
            android:id="@+id/llWeb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/esquinas_redondeadas_files"
            android:gravity="center_vertical|start">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|start"
                android:layout_margin="10dp"
                android:src="@drawable/webicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webs_subidas" />
        </LinearLayout>

        <!-- Tercer elemento del grid con imagen alineada al centro izquierda -->
        <LinearLayout
            android:id="@+id/llWeb2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/esquinas_redondeadas_files"
            android:gravity="center_vertical|start">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|start"
                android:layout_margin="10dp"
                android:src="@drawable/react" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Webs prueba" />
        </LinearLayout>

    </GridLayout>

</LinearLayout>
